# dagster-docker-pipeline

./: Dockerfile  README.md  Tiltfile  docker-compose.yml  neo4j_resource.py  pyproject.toml  requirements.txt
dagster_pipeline/: assets.py  pipeline.py
